tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_91.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := (+ ((+ (x DIV y)) DIV ((y - 200) MOD (- 0))));
               r := ((((1 * x) + (- y)) + (+ (+ 0))) > (((x - 2) DIV (- 200)) + ((0 MOD 2) - (- x))));
               p := ((((2 - x) * (+ 0)) = (+ (2 MOD 2))) OR (((1 - y) >= (200 * x)) & ((+ 200) < (x + 1223))));
               p := (((- (+ 2)) > (+ (2 MOD x))) OR (~ ((- 0) < (z - 200))));
               q := ((((1 MOD x) - (z - 1)) * (- (x DIV x))) # (((0 DIV 0) MOD (200 - 1223)) * ((x * 2) * (200 * x))));
               x := ((((200 - x) DIV (1223 DIV 200)) - (- (x + z))) - (((2 - 0) DIV (+ 2)) - (+ (1223 DIV z))));
               x := (((- (z DIV 0)) - ((1 * 200) DIV (1 * 1223))) + ((+ (+ 1223)) MOD ((1223 MOD z) MOD (+ 0))));
               z := ((((1 * 1) DIV (- 0)) DIV ((- x) + (y * y))) + (- ((0 + z) DIV (1223 - y))));
               y := ((- ((- 0) - (0 DIV 0))) * (((2 - 1) MOD (x + 1)) * ((z - 2) MOD (x + 2))));
  (* error *)  x := ((((+ r) + (2 MOD 1)) * ((1223 * 200) MOD (- 1))) MOD ((- (y MOD y)) MOD (- (1 DIV 2))))
END Test20.